--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@geofence/sdk",
+  "name": "geofence-sdk",
   "version": "0.1.0",
   "description": "Geofencing SDK for browser-based geolocation tracking",
   "main": "./dist/index.js",
@@ -27,6 +27,11 @@
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HCL-CDP-TA/geofence.git",
+    "directory": "packages/sdk"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "tsup": "^8",
