--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,6 +1,4 @@
 {
-  ".": "1.0.9",
   "packages/sdk": "1.0.8",
-  "packages/admin": "1.0.8",
-  "packages/test-app": "1.0.8"
+  "packages/admin": "1.0.8"
 }
