--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,43 +1,37 @@
 {
-  "release-type": "node",
   "packages": {
-    ".": {
-      "package-name": "geofence-monorepo",
+    "packages/sdk": {
+      "release-type": "node",
+      "package-name": "@hcl-cdp-ta/geofence-sdk",
       "include-v-in-tag": true,
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
+      "changelog-path": "CHANGELOG.md",
       "changelog-sections": [
         { "type": "feat", "section": "Features", "hidden": false },
-        { "type": "feature", "section": "Features", "hidden": false },
         { "type": "fix", "section": "Bug Fixes", "hidden": false },
         { "type": "chore", "section": "Maintenance", "hidden": false },
         { "type": "docs", "section": "Documentation", "hidden": false },
-        { "type": "style", "section": "Code Style", "hidden": true },
         { "type": "refactor", "section": "Code Refactoring", "hidden": false },
-        { "type": "perf", "section": "Performance Improvements", "hidden": false },
-        { "type": "test", "section": "Tests", "hidden": true }
+        { "type": "perf", "section": "Performance Improvements", "hidden": false }
       ]
     },
-    "packages/sdk": {
-      "package-name": "@hcl-cdp-ta/geofence-sdk",
-      "include-v-in-tag": false,
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
-      "changelog-path": "CHANGELOG.md"
-    },
     "packages/admin": {
+      "release-type": "node",
       "package-name": "admin",
-      "include-v-in-tag": false,
+      "include-v-in-tag": true,
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
-      "changelog-path": "CHANGELOG.md"
-    },
-    "packages/test-app": {
-      "package-name": "@geofence/test-app",
-      "include-v-in-tag": false,
-      "bump-minor-pre-major": true,
-      "bump-patch-for-minor-pre-major": true,
-      "changelog-path": "CHANGELOG.md"
+      "changelog-path": "CHANGELOG.md",
+      "changelog-sections": [
+        { "type": "feat", "section": "Features", "hidden": false },
+        { "type": "fix", "section": "Bug Fixes", "hidden": false },
+        { "type": "chore", "section": "Maintenance", "hidden": false },
+        { "type": "docs", "section": "Documentation", "hidden": false },
+        { "type": "refactor", "section": "Code Refactoring", "hidden": false },
+        { "type": "perf", "section": "Performance Improvements", "hidden": false }
+      ]
     }
-  }
+  },
+  "separate-pull-requests": true
 }
