--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -25,7 +25,7 @@
     "location",
     "tracking"
   ],
-  "author": "",
+  "author": "Simon Pallister",
   "license": "MIT",
   "repository": {
     "type": "git",
