--- a/.github/workflows/publish-manual.yml.example
+++ b/.github/workflows/publish-manual.yml.example
@@ -26,10 +26,10 @@ jobs:
           registry-url: "https://registry.npmjs.org/"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build SDK package
-        run: npm run build -w sdk
+        run: npm run build -w @hcl-cdp-ta/geofence-sdk
 
       - name: Publish SDK to npm
         run: cd packages/sdk && npm publish --access public --provenance
