--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -47,7 +47,7 @@ jobs:
         run: npm install
 
       - name: Build SDK package
-        run: npm run build -w sdk
+        run: npm run build -w @hcl-cdp-ta/geofence-sdk
 
       - name: Publish SDK to npm
         run: cd packages/sdk && npm publish --access public --provenance
