--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -2,6 +2,7 @@
   "name": "admin",
   "version": "2.1.0",
   "private": true,
+  "description": "Geofence admin dashboard - Docker deployment fix",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
