feat: added user list API (plus deploy fix for api key

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
       - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3004}
       - AUTH_TRUST_HOST=true
+      - GEOFENCE_API_KEY=${GEOFENCE_API_KEY:-}
       - GEOFENCE_WEBHOOK_URL=${GEOFENCE_WEBHOOK_URL:-}
       - CDP_API_KEY=${CDP_API_KEY:-}
       - CDP_PASS_KEY=${CDP_PASS_KEY:-}
