--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,8 +1,8 @@
 {
   "name": "admin",
-  "version": "2.2.0",
+  "version": "2.1.2",
   "private": true,
-  "description": "Geofence admin dashboard - Docker deployment fix",
+  "description": "Geofence admin dashboard",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
