--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -13,6 +13,7 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
     "next": "16.0.10",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/pg": "^8.15.6",
