fix: correct JSON syntax in release-please manifest

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,8 +22,7 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
         with:
-          # Use personal access token instead of GITHUB_TOKEN
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
